Создание кеша